fix: customer bookings now appear in barber queue instantly
- Root cause: BarberProvider was querying 'barberQueue' collection (never synced), while BookingService writes to 'bookings' collection
- Solution: Updated BarberProvider to read from 'bookings' collection (single source of truth)
- Changes:
  - Updated getBarberQueueStream() to query 'bookings' with proper filters
  - Updated loadBarberQueue() to fetch from 'bookings' collection
  - Updated completeService() to update booking status in 'bookings'
  - Updated skipCustomer() to mark booking as skipped in 'bookings'
  - Added AppConstants import for consistency
  - Changed List<BarberQueue> to List<dynamic> for queue state (maintains backward compatibility)
  - Added helper methods _formatWaitTime() and _getServiceTypesFromBooking()

- Fixed analyzer warnings:
  - Removed unnecessary null-assertion operators (!) in barber_edit_profile_screen.dart
  - Cleaned up unnecessary casts in barber_provider.dart

- Testing: Queue will now update in real-time as customers create bookings
- Firestore security rules already permit barber to read bookings where barberId == request.auth.uid

--- a/firebase.json
+++ b/firebase.json
@@ -1,1 +1,28 @@
-{"flutter":{"platforms":{"android":{"default":{"projectId":"barber-pro-20d4b","appId":"1:612832799916:android:7f85f8230c76fd163d0309","fileOutput":"android/app/google-services.json"}},"dart":{"lib/firebase_options.dart":{"projectId":"barber-pro-20d4b","configurations":{"android":"1:612832799916:android:7f85f8230c76fd163d0309","ios":"1:612832799916:ios:e15082115f99d6f73d0309","macos":"1:612832799916:ios:e15082115f99d6f73d0309","web":"1:612832799916:web:034cc60f6eeffb7c3d0309","windows":"1:612832799916:web:e45364b7c2d984f23d0309"}}}}}}
+﻿{
+	"firestore": {
+		"rules": "firestore.rules"
+	},
+	"flutter": {
+		"platforms": {
+			"android": {
+				"default": {
+					"projectId": "barber-pro-20d4b",
+					"appId": "1:612832799916:android:7f85f8230c76fd163d0309",
+					"fileOutput": "android/app/google-services.json"
+				}
+			}
+		},
+		"dart": {
+			"lib/firebase_options.dart": {
+				"projectId": "barber-pro-20d4b",
+				"configurations": {
+					"android": "1:612832799916:android:7f85f8230c76fd163d0309",
+					"ios": "1:612832799916:ios:e15082115f99d6f73d0309",
+					"macos": "1:612832799916:ios:e15082115f99d6f73d0309",
+					"web": "1:612832799916:web:034cc60f6eeffb7c3d0309",
+					"windows": "1:612832799916:web:e45364b7c2d984f23d0309"
+				}
+			}
+		}
+	}
+}
