Fix: Remove iOS, fix OAuth, update google-services.json with correct SHA-1

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,12 +1,17 @@
-org.gradle.jvmargs=-Xmx8G -XX:MaxMetaspaceSize=4G -XX:ReservedCodeCacheSize=512m -XX:+HeapDumpOnOutOfMemoryError
-# Enable Gradle daemon to keep JVM warm between builds
-org.gradle.daemon=true
-# Allow parallel project execution where possible
-org.gradle.parallel=true
-# Configure on demand to reduce configuration time for multi-module projects
-org.gradle.configureondemand=true
-# Enable Gradle build cache to reuse build outputs
-org.gradle.caching=true
+org.gradle.jvmargs=-Xmx1024m -XX:MaxMetaspaceSize=512m -XX:ReservedCodeCacheSize=64m -XX:+HeapDumpOnOutOfMemoryError
+# Disable Gradle daemon to avoid long-running JVM issues
+org.gradle.daemon=false
+# Disable parallel builds to reduce memory/CPU stress
+org.gradle.parallel=false
+# Disable on-demand configuration
+org.gradle.configureondemand=false
+# Disable Gradle build cache to simplify debugging
+org.gradle.caching=false
 android.useAndroidX=true
-# Enable Kotlin incremental compilation for faster Kotlin builds
-kotlin.incremental=true
+# Disable incremental Kotlin compilation
+kotlin.incremental=false
+# Disable javaprecompile entirely
+org.gradle.java.precompile=false
+android.skipJavaPrecompile=true
+# Disable Gradle plugins (if unused)
+org.gradle.workers.max=1
