Initial commit: barber_pro_multi_barber project

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: barber_pro
+name: barber_pro_multi_barber
 description: "BarberPro — Real-Time Barber Booking & Queue Management System"
 publish_to: 'none'
 
