--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,9 +2,6 @@
   "name": "BarberPro Flutter Development",
   "image": "mcr.microsoft.com/devcontainers/universal:2-linux",
   "features": {
-    "ghcr.io/devcontainers/features/flutter:1": {
-      "version": "latest"
-    },
     "ghcr.io/devcontainers/features/git:1": {}
   },
   "customizations": {
@@ -22,7 +19,7 @@
       }
     }
   },
-  "postCreateCommand": "flutter pub get && flutter doctor",
+  "postCreateCommand": "flutter pub get && flutter doctor --no-android && echo 'Development environment ready!'",
   "remoteUser": "codespace",
   "forwardPorts": [
     3000,
