--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,8 +1,8 @@
 name: Build Flutter artifacts (APKs & AABs)
 
 on:
-  push:
-    branches: [ main ]
+  push: {}
+  pull_request: {}
   workflow_dispatch:
 
 jobs:
